fixed navigation dark mode support

--- a/assets/scss/_navigation_dark.scss
+++ b/assets/scss/_navigation_dark.scss
@@ -1,7 +1,8 @@
 @mixin navigation_dark {
 
-
   .navigation {
+    background-color: $bg-color-dark;
+
     a, span {
       color: $fg-color-dark;
     }
